set footer to the bottom of the page

--- a/style.css
+++ b/style.css
@@ -11,11 +11,19 @@ body {
 }
 
 .menu {
-  background-color: white;
+  background-color: white !important;
 }
 
 .categoryBtn {
   background-color: #84e795 !important;
+}
+
+.footer {
+  position: fixed;
+  bottom: -14px;
+  margin: auto;
+  width: 102%;
+  background-color: white !important;
 }
 
 /* body::before {
