--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@ body {
   bottom: 0px;
   opacity: 0.5;
 } */
+
+.carouselCard {
+  width: 500px;
+  height: 500px; 
+  background-color: white;
+  position: relative;
+} 
+.carouselImg {
+  width: 300px;
+  margin: 10px; 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
