--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
 
 #welcomePage {
   background-image: url("https://wallpapercave.com/wp/wp4546211.jpg");
+  background-blend-mode: hard-light;
+  backdrop-filter: blur(1px);
 }
 
 .menu {
@@ -49,4 +51,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+#startingContent {
+  margin-top: 25em;
 }
