--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background-color: white !important;
 }
 
-.main > button {
+.appButton {
   background-color: #84e795 !important;
   margin-top: 15px !important;
   width: 10em;
