--- a/style.css
+++ b/style.css
@@ -25,11 +25,24 @@ body {
 
 .footer {
   position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   bottom: -14px;
   margin: auto;
   width: 101%;
   background-color: white !important;
 }
+
+.audioSection > button {
+  margin-left: 20px;
+}
+
+/* .blue {
+  height: 20px;
+  background: red;
+  width: 101%;
+} */
 
 /* body::before {
   content: "";
@@ -65,5 +78,5 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
+
