--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 #welcomePage {
   background-image: url("https://wallpapercave.com/wp/wp4546211.jpg");
   background-blend-mode: hard-light;
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(2px);
 }
 
 .menu {
@@ -77,6 +77,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  height: 80%;
 }
 
