--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   backdrop-filter: blur(2px);
 }
 
+/* nav bar */
 .menu {
   background-color: white !important;
 }
@@ -26,23 +27,20 @@ body {
 .footer {
   position: fixed;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   bottom: -14px;
   margin: auto;
+  padding: 0.75em;
   width: 101%;
   background-color: white !important;
 }
 
 .audioSection > button {
-  margin-left: 20px;
+  background-color: #84e795;
+  border: 0px;
+  border-radius: 27px;
+  padding: 0.5em;
 }
-
-/* .blue {
-  height: 20px;
-  background: red;
-  width: 101%;
-} */
 
 /* body::before {
   content: "";
@@ -69,11 +67,13 @@ body {
   transform: translate(-50%, -50%);
 }
 
+/* Makes bar with START button go down */
 #startingContent {
   margin-top: 25em;
 }
 
-.main {
+/* category buttons in categories.html (2nd page)*/
+#catButtons {
   display: flex;
   flex-direction: column;
   align-items: center;
