--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
   background-color: #8ec0e7;
 }
 
+/* Allows content hidden behind footer to show */
+#main {
+  padding-bottom: 100px;
+}
+
 #welcomePage {
   background-image: url("https://wallpapercave.com/wp/wp4546211.jpg");
   background-blend-mode: hard-light;
