--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   padding-bottom: 200px;
 }
 
+#catHeading {
+  margin-bottom: 25px;
+}
+
 #random,
 #fitness,
 #chores,
@@ -19,6 +23,7 @@ body {
 #read,
 #dance {
   box-shadow: 3px 3px;
+  padding-bottom: 35px !important;
 }
 
 #welcomePage {
