--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
   border-radius: 27px !important;
 }
 
+#startBtn {
+  box-shadow: 3px 3px 2px white;
+}
+
 .footer {
   position: fixed;
   display: flex;
