--- a/style.css
+++ b/style.css
@@ -57,19 +57,23 @@ body {
   position: fixed;
   display: flex;
   align-items: center;
-  bottom: -14px;
-  margin: auto;
-  padding: 0.75em;
-  width: 101%;
+  bottom: 0px;
+  margin: auto !important;
+  padding: 1em;
+  width: 100%;
   background-color: white !important;
 }
 
-.audioSection > button {
+i {
+  color: #84e795;
+}
+
+/* .audioSection > button {
   background-color: #84e795;
   border: 0px;
   border-radius: 27px;
   padding: 0.5em;
-}
+} */
 
 .carouselCard {
   width: 500px;
@@ -104,11 +108,6 @@ body {
   align-items: center;
   justify-content: space-evenly;
   height: 80%;
-}
-
-#playBtn,
-#pauseBtn {
-  box-shadow: 3px 3px 2px black;
 }
 
 #recdPage {
